--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
     </style>
     <script>
       function init(home) {
-        var url = "pages" + (location.pathname === "/" || home ? "/index" : location.pathname) + ".md?" + Date.now();
+        var url = "pages" + (location.pathname === "/" || home ? "/index" : location.pathname) + ".md";
         $("#editongithub").attr("href", "https://github.com/markvoortmanppu/appliedcomputerscience/edit/master/" + url);
         $.ajax({
-          url: url,
+          url: url + "?" + Date.now(),
           type: "get",
           dataType: "html",
           success: function(data) {
@@ -77,7 +77,9 @@
     <footer class="footer">
       <div id="footer" style="margin: auto; text-align: center; max-width: 800px;">
         <div style="padding: 15px; background-color: #738B35; font-size: 125%; font-weight: bold; color: white;">
-          <a id="editongithub" href="/" style="color: white; text-decoration: none; font-size: 70%;">Edit on GitHub</a><br>
+          <a id="editongithub" href="/" style="color: white; text-decoration: none; font-size: 70%;">Edit Page</a>
+          <span style="font-size: 70%;">/</span>
+          <a id="editongithub" href="https://github.com/markvoortmanppu/appliedcomputerscience/new/master/pages" style="color: white; text-decoration: none; font-size: 70%;">New Page</a><br>
           <a href="https://pointpark.edu/Academics/Schools/Business/index" style="color: white; text-decoration: none;">Rowland School of Business</a><br>
           <a href="https://pointpark.edu/" style="color: white; text-decoration: none;">Point Park University</a>
         </div>
