--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       }
       a:link    { color: black; }
       a:visited { color: black; }
+      ul { padding-left: 1.2em; }
     </style>
     <script>
       function init(home) {
