--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       }
       a:link    { color: black; }
       a:visited { color: black; }
-      ul { padding-left: 1em; }
+      ul, ol { padding-left: 1em; }
     </style>
     <script>
       function init(home) {
