--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             });
             $("#content").append("<br>");
             $("#content").append(marked(data, { breaks: true }));
+            $("#content").find("img").css("width", "100%");
           }
         }).fail(function(jqXHR, textStatus, error) {
           if (jqXHR.status) {
