--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
         display: flex;
         flex-direction: column;
       }
+      pre {
+        overflow: scroll;
+      }
+      code {
+        overflow-wrap: break-word;
+      }
       .content {
         margin: 0;
         padding: 0;
