--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       }
       pre {
         overflow: scroll;
+        background-color: #f0f0f0;
+        padding: 5px;
       }
       code {
         overflow-wrap: break-word;
